# video-to-llm-cli

./: .gitignore  LICENSE  README.md  devlog-1-feedback-analysis.md  pyproject.toml  setup.sh  video-to-context
src/video_to_llm/: __init__.py  analysis.py  cli.py  events.py  features.py  ocr.py  outputs.py  profiles.py  selection.py  stream.py  video.py
tests/: test_cli.py  test_events.py  test_features.py
