[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-to-llm-cli"
version = "0.1.0"
description = "Turn videos into structured timelines, embeddings, OCR text, and representative frames for LLM workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "loji-gaming" }
]
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "Pillow>=10.0",
  "typer>=0.12",
]

[project.optional-dependencies]
download = ["yt-dlp>=2025.1.1"]
dev = ["pytest>=8.0"]

[project.scripts]
video-to-llm = "video_to_llm.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
